@@ -367,8 +367,7 @@ fhandler_proc::fill_filebuf ()
     return true;
 }
 
-static
-__off64_t
+static __off64_t
 format_proc_meminfo (char *destbuf, size_t maxsize)
 {
   unsigned long mem_total = 0UL, mem_free = 0UL, swap_total = 0UL,
@@ -398,8 +397,7 @@ format_proc_meminfo (char *destbuf, size_t maxsize)
 				   swap_total >> 10, swap_free >> 10);
 }
 
-static
-__off64_t
+static __off64_t
 format_proc_uptime (char *destbuf, size_t maxsize)
 {
   unsigned long long uptime = 0ULL, idle_time = 0ULL;
@@ -429,8 +427,7 @@ format_proc_uptime (char *destbuf, size_t maxsize)
 			  idle_time / 100, long (idle_time % 100));
 }
 
-static
-__off64_t
+static __off64_t
 format_proc_stat (char *destbuf, size_t maxsize)
 {
   unsigned long long user_time = 0ULL, kernel_time = 0ULL, idle_time = 0ULL;
